added date and time validation
